Fix pop-up being invisible in theater mode

--- a/src/twitch_content.css
+++ b/src/twitch_content.css
@@ -27,8 +27,8 @@
 
 .nor-report-wrapper {
     position: absolute;
-    z-index: 150;
-    top: 50px; left: 0; right: 0; bottom: 0;
+    z-index: 3000;
+    top: 0; left: 0; right: 0; bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
